moved stock watchlist data to avoid overlap with delete button

--- a/src/pages/stocks/Stocks.module.css
+++ b/src/pages/stocks/Stocks.module.css
@@ -384,7 +384,7 @@
   align-items: center;
   column-gap: 3px;
   padding: 1px 0;
-  width: 120px;
+  width: 130px;
   cursor: default;
 }
 .stocks-watchlist-price {
